spring-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
  labels:
    app: petclinic
spec:
  replicas: 3
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        imagePullPolicy: Always
        image: harbor.59s.io/59s/spring-petclinic@sha256:24da66db9922ec0d8440dc4f3f60e2148dd8c10108a2fad167e78c6de5399def
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "400Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 6
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 6
        startupProbe:
          httpGet:
            path: /
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
        env: []
          # - name: spring_profiles_active
          #   value: mysql
          # - name: MYSQL_URL
          #   value: "jdbc:mysql://questionable-hole-mysql.default.svc.cluster.local/petclinic"
---
apiVersion: v1
kind: Service
metadata:
  name: pb-frontend
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      ingress.kubernetes.io/force-ssl-redirect: "true"
      kubernetes.io/ingress.class: contour
      kubernetes.io/tls-acme: "true"
  name: ingress-petclinic
spec:
    rules:
    - host: petclinic.59s.io
      http:
        paths:
        - backend:
            serviceName: pb-frontend
            servicePort: 80
    tls:
    - hosts:
      - petclinic.59s.io
      secretName: petclinic
